--- a/package.json
+++ b/package.json
@@ -2,18 +2,30 @@
   "name": "jot-spot-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon server.ts",
+    "start": "nodemon server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "@prisma/client": "^4.9.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20"
+    "npm": "^9.3.1",
+    "run": "^1.4.0",
+    "server": "^1.0.38"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
+    "prisma": "^4.9.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
