--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "npm": "^9.3.1",
-    "run": "^1.4.0",
-    "server": "^1.0.38"
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
